// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellOfferSummary renders correctly 1`] = `
<SummaryCard>
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "marginBottom": 4,
          "textAlign": "center",
        }
      }
    >
      you're selling
    </PeachText>
    <BTCAmount
      amount={250000}
      size="small"
    />
  </SummarySection>
  <HorizontalLine />
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "textAlign": "center",
        }
      }
    >
      with a
    </PeachText>
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
            "textAlign": "center",
          },
          {
            "color": "#05A85A",
          },
        ]
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          }
        }
      >
        1.5
        % 
      </PeachText>
      premium
    </PeachText>
  </SummarySection>
  <HorizontalLine />
  <PaymentMethods
    offer={
      {
        "amount": 250000,
        "creationDate": 2022-03-08T11:41:07.245Z,
        "doubleMatched": false,
        "funding": {
          "amounts": [],
          "expiry": 537,
          "status": "NULL",
          "txIds": [],
          "vouts": [],
        },
        "id": "38",
        "lastModified": 2022-03-08T11:41:07.245Z,
        "matched": [],
        "matches": [],
        "meansOfPayment": {
          "EUR": [
            "sepa",
          ],
        },
        "online": true,
        "originalPaymentData": [
          {
            "beneficiary": "Hal Finney",
            "bic": "AAAA BB CC 123",
            "currencies": [
              "EUR",
            ],
            "hidden": false,
            "iban": "IE29 AIBK 9311 5212 3456 78",
            "id": "sepa-1669721660451",
            "label": "SEPA EUR",
            "type": "sepa",
          },
        ],
        "paymentData": {
          "sepa": {
            "hashes": [
              "8b703de3cb4f30887310c0f6fcaa35d58be484207ebffec12be69ec9b1d0b5f3",
            ],
          },
        },
        "premium": 1.5,
        "publishingDate": 2022-03-08T11:41:07.245Z,
        "refunded": false,
        "released": false,
        "returnAddress": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
        "seenMatches": [],
        "tradeStatus": "waiting",
        "type": "ask",
      }
    }
  />
  <HorizontalLine />
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "textAlign": "center",
        }
      }
    >
      refund wallet:
    </PeachText>
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "textAlign": "center",
        }
      }
    >
      <WalletLabel
        address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      />
    </PeachText>
  </SummarySection>
</SummaryCard>
`;

exports[`SellOfferSummary renders correctly when the premium is 0 1`] = `
<SummaryCard>
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "marginBottom": 4,
          "textAlign": "center",
        }
      }
    >
      you're selling
    </PeachText>
    <BTCAmount
      amount={250000}
      size="small"
    />
  </SummarySection>
  <HorizontalLine />
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "textAlign": "center",
        }
      }
    >
      with a
    </PeachText>
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
            "textAlign": "center",
          },
          {
            "color": "#BAADA7",
          },
        ]
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          }
        }
      >
        0
        % 
      </PeachText>
      premium
    </PeachText>
  </SummarySection>
  <HorizontalLine />
  <PaymentMethods
    offer={
      {
        "amount": 250000,
        "creationDate": 2022-03-08T11:41:07.245Z,
        "doubleMatched": false,
        "funding": {
          "amounts": [],
          "expiry": 537,
          "status": "NULL",
          "txIds": [],
          "vouts": [],
        },
        "id": "38",
        "lastModified": 2022-03-08T11:41:07.245Z,
        "matched": [],
        "matches": [],
        "meansOfPayment": {
          "EUR": [
            "sepa",
          ],
        },
        "online": true,
        "originalPaymentData": [
          {
            "beneficiary": "Hal Finney",
            "bic": "AAAA BB CC 123",
            "currencies": [
              "EUR",
            ],
            "hidden": false,
            "iban": "IE29 AIBK 9311 5212 3456 78",
            "id": "sepa-1669721660451",
            "label": "SEPA EUR",
            "type": "sepa",
          },
        ],
        "paymentData": {
          "sepa": {
            "hashes": [
              "8b703de3cb4f30887310c0f6fcaa35d58be484207ebffec12be69ec9b1d0b5f3",
            ],
          },
        },
        "premium": 0,
        "publishingDate": 2022-03-08T11:41:07.245Z,
        "refunded": false,
        "released": false,
        "returnAddress": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
        "seenMatches": [],
        "tradeStatus": "waiting",
        "type": "ask",
      }
    }
  />
  <HorizontalLine />
  <SummarySection>
    <PeachText
      style={
        {
          "color": "#7D675E",
          "textAlign": "center",
        }
      }
    >
      refund wallet:
    </PeachText>
    <PeachText
      style={
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "textAlign": "center",
        }
      }
    >
      <WalletLabel
        address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      />
    </PeachText>
  </SummarySection>
</SummaryCard>
`;
